--- a/app/views/users/register.html.twig
+++ b/app/views/users/register.html.twig
@@ -13,7 +13,7 @@
                             <div class="input-group-addon iconInput iconInputLeft pt-2" >
                                 <i class="fas fa-user"></i>
                             </div>
-                            <input class="form-control" type="text" id="username" placeholder="Uživatelské jméno *" name="username" value="{{ username }}">
+                            <input class="form-control" type="text" id="username" placeholder="Uživatelské jméno *" name="username" value="{{ username }}" required>
                         </div>
                     </div>
                     <span class="invalidFeedBack">
@@ -27,7 +27,7 @@
                             <div class="input-group-addon iconInput iconInputLeft pt-2" >
                                 <i class="fas fa-envelope"></i>
                             </div>
-                        <input class="form-control" id="email" type="email" placeholder="Email *" name="email" value="{{ email }}">
+                        <input class="form-control" id="email" type="email" placeholder="Email *" name="email" value="{{ email }}" required>
                         </div>
                     </div>
                     <span class="invalidFeedBack">
