--- a/app/views/includes/head.inc.twig
+++ b/app/views/includes/head.inc.twig
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{{ constant('URLROOT') }}/public/css/fontawesome.min.css">
     <!-- according to tutorial https://www.youtube.com/watch?v=hc3crz0E2wk -->
 
-    <link rel="stylesheet" href="{{ constant('URLROOT') }}/public/css/style.css?version=1.1">
+    <link rel="stylesheet" href="{{ constant('URLROOT') }}/public/css/style.css?version=1.2">
 
     <!-- WYSIWYG tiny cloud-->
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
@@ -26,7 +26,7 @@
         });
     </script>
     <script src="{{ constant('URLROOT') }}/public/javascript/jquery-3.6.0.js"></script>
-    <script src="{{ constant('URLROOT') }}/public/javascript/javascript.js"></script>
+    <script src="{{ constant('URLROOT') }}/public/javascript/javascript.js?version=1.2"></script>
     <script src="{{ constant('URLROOT') }}/public/bootstrap-5.1.2-dist/js/bootstrap.bundle.js" ></script>
     <!-- bootstrap js link to web
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
