--- a/app/views/includes/navigation.inc.twig
+++ b/app/views/includes/navigation.inc.twig
@@ -15,18 +15,21 @@
 
             <ul class="navbar-nav nav-pills ms-auto">
                 {% if session.user is not empty %}
-                    {% if session.user.role == 'superadmin' or session.user.role == 'admin' %}
+
                     <li class="nav-item">
                         <span class="input-group">
                             <a class="nav-link" href="{{ constant('URLROOT')}}/users/manageUsers">
-                                        <i class="fas fa-users-cog"></i> Správa uživatelů
+                                        {% if session.user.role == 'superadmin' or session.user.role == 'admin' %}
+                                            <i class="fas fa-users-cog"></i> Správa uživatelů
+                                        {% else %}
+                                            <i class="fas fa-users"></i> Seznam uživatelů
+                                        {% endif %}
                                 </a>
                         </span>
                     </li>
-                    {% endif %}
                 <li class="nav-item">
                     <span class="input-group">
-                        <a class="nav-link" href="{{ constant('URLROOT')}}/users/profil">
+                        <a class="nav-link" href="{{ constant('URLROOT')}}/users/index">
                             <i class="fas fa-user" rel="uživatel" alt="user profile:"></i> {{ session.user.username }}({{ session.user.role }})
                         </a>
                     </span>
