--- a/app/views/posts/update.html.twig
+++ b/app/views/posts/update.html.twig
@@ -10,7 +10,7 @@
         <div class="form-gorup mb-4 form-item">
             <label>Nadpis</label>
             <input class="form-control" type="text" name="title" placeholder="Titulek článku *"
-                   value="{{ post.title }}">
+                   value="{{ post.title }}" required>
             <span class="invalidFeedBack">
                 {{ titleError }}
             </span>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="form-group mb-4 form-item">
-            <label>Čláenk</label>
+            <label>Článek</label>
             <textarea class="form-control" type="text" id="wysiwygTextArea" name="content" placeholder="Zadejte svůj příspěvek *">
                 {{ post.content }}
             </textarea>
